[package]
name = "activity_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
discord_social_rpc = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = "0.4"
mlua = { version = "0.12.0", features = ["lua54", "send", "vendored"] }
